Can add or remove expiries

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -6,3 +6,14 @@ div.barcodeScanner {
     width: 640px;
     height: 480px;
 }
+
+span.expiry-danger {
+    color: red;
+}
+
+span.expiry-warning {
+    color: orange;
+}
+
+// span.expiry-normal {
+// }
