Split buttons apart in search add modal

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -21,3 +21,7 @@ span.expiry-warning {
 a.viewOffButton {
     margin-left: 1em;
 }
+
+footer.custom-footer-modal {
+    display: block !important;
+}
