--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -25,3 +25,7 @@ a.viewOffButton {
 footer.custom-footer-modal {
     display: block !important;
 }
+
+div.manage-item-carousel {
+    margin-bottom: 1.5em;
+}
